--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,15 @@ services:
       POSTGRES_DB: nest
     networks:
       - library
+  test-db:
+    image: postgres:13
+    ports:
+      - 5435:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1122
+      POSTGRES_DB: nest
+    networks:
+      - library
 networks: 
   library:
